force-app/main/default/objects/Processor__c/Processor__c.object-meta.xml
<CustomObject>
    <label>Processor</label>
    <nameField>
        <label>Processor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Processors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>