force-app/main/default/objects/Processor__c/fields/Clock_speed__c.field-meta.xml
<CustomField>
    <fullName>Clock_speed__c</fullName>
    <label>Clock speed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>