force-app/main/default/objects/Processor__c/fields/Generation__c.field-meta.xml
<CustomField>
    <fullName>Generation__c</fullName>
    <label>Generation</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>