force-app/main/default/objects/Processor__c/fields/Number_of_cores__c.field-meta.xml
<CustomField>
    <fullName>Number_of_cores__c</fullName>
    <label>Number of cores</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>