force-app/main/default/objects/Processor__c/fields/Number_of_threads__c.field-meta.xml
<CustomField>
    <fullName>Number_of_threads__c</fullName>
    <label>Number of threads</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>