force-app/main/default/objects/Processor__c/fields/Socket__c.field-meta.xml
<CustomField>
    <fullName>Socket__c</fullName>
    <label>Socket</label>
    <length>8</length>
    <type>Text</type>
</CustomField>